[tool.poetry]
name = "pytb"
version = "0.1.0"
description = ""
authors = ["mcgillij <mcgillivray.jason@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"
pygame-pgu = "^0.21"

[tool.poetry.dev-dependencies]
pylint = "^2.9.4"
black = "^21.7b0"
flake8 = "^3.9.2"
ipython = "^7.25.0"
Sphinx = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
